--- a/momentum/index.html
+++ b/momentum/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
