--- a/momentum/index.html
+++ b/momentum/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Welcome</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap">
-  <link rel="stylesheet" href="css/style.css">
-</head>
+  <body>
+    <button id="next-image">Next</button>
+    <time id="time"></time>
+    <h1>
+      <span id="greeting"></span>
+      <span id="name" contenteditable="true"></span>
+    </h1>
 
-<body>
-  <button id="next-image">Next</button>
-  <time id="time"></time>
-  <h1>
-    <span id="greeting"></span>
-    <span id="name" contenteditable="true"></span>
-  </h1>
+    <h2>What Is Your Focus For Today?</h2>
+    <h2 id="focus" contenteditable="true"></h2>
 
-  <h2>What Is Your Focus For Today?</h2>
-  <h2 id="focus" contenteditable="true"></h2>
-
-  <script src="js/main.js"></script>
-</body>
-
+    <script src="js/main.js"></script>
+  </body>
 </html>
