--- a/momentum/index.html
+++ b/momentum/index.html
@@ -22,6 +22,15 @@
     <h2>What Is Your Focus For Today?</h2>
     <h2 id="focus" contenteditable="true"></h2>
 
+    <button id="next-quote"></button>
+    <figure class="quote">
+      <blockquote>
+        You were not born a winner, and you were not born a loser. You are what
+        you make yourself be.
+      </blockquote>
+      <figcaption>Lou Holtz</figcaption>
+    </figure>
+
     <script src="js/main.js"></script>
   </body>
 </html>
