feat: implement weather displaying functionality

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome</title>
+    <link rel="stylesheet" href="css/owfont-regular.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap"
@@ -30,6 +31,11 @@
       </blockquote>
       <figcaption>Lou Holtz</figcaption>
     </figure>
+
+    <div class="city" contenteditable="true">Belgorod</div>
+    <i class="weather-icon owf"></i>
+    <div class="temperature"></div>
+    <div class="weather-description"></div>
 
     <script src="js/main.js"></script>
   </body>
