feat: add handler of city changing

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -32,7 +32,7 @@
       <figcaption>Lou Holtz</figcaption>
     </figure>
 
-    <div class="city" contenteditable="true">Belgorod</div>
+    <div class="city" contenteditable="true"></div>
     <i class="weather-icon owf"></i>
     <div class="temperature"></div>
     <div class="weather-description"></div>
