feat: add support wind and humidity of weather

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -19,6 +19,10 @@
         <i class="weather-icon owf"></i>
         <div class="temperature"></div>
       </div>
+      <div class="add-info">
+        <div class="wind"></div>
+        <div class="humidity"></div>
+      </div>
       <div class="weather-description"></div>
       <div class="city" contenteditable="true"></div>
     </div>
