fix: disable spellcheck

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome</title>
+    <title>Momentum</title>
     <link rel="stylesheet" href="css/owfont-regular.css" />
     <link
       rel="stylesheet"
@@ -24,17 +24,17 @@
         <div class="humidity"></div>
       </div>
       <div class="weather-description"></div>
-      <div class="city" contenteditable="true"></div>
+      <div class="city" spellcheck="false" contenteditable="true"></div>
     </div>
 
     <time id="time"></time>
     <h1>
       <span id="greeting"></span>
-      <span id="name" contenteditable="true"></span>
+      <span id="name" spellcheck="false" contenteditable="true"></span>
     </h1>
 
     <h2>What Is Your Focus For Today?</h2>
-    <h2 id="focus" contenteditable="true"></h2>
+    <h2 id="focus" spellcheck="false" contenteditable="true"></h2>
 
     <div class="blockquote">
       <figure class="quote">
