feat: add toast module

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -69,6 +69,8 @@
     <div class="lang" title="Language">en</div>
     <button id="next-quote" title="Next quote"></button>
 
+    <div class="toasts"></div>
+
     <script src="js/main.js"></script>
   </body>
 </html>
