feat: fix time position

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -37,7 +37,7 @@
       ></div>
     </div>
 
-    <time id="time"></time>
+    <div id="time"></div>
     <h1>
       <span id="greeting"></span>
       <span
